# diloco-training

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.cuda  Dockerfile.rocm  Makefile  README.md  config.yaml  config_gcn.yaml  config_gpt.yaml  config_resnet.yaml  config_wav2vec.yaml  pyproject.toml  run.sh  run1.sh  training-config-updated.json
.github/workflows/: ci.yaml  post-main-push.yaml  post-release.yaml  pr-to-discord.yml  release-please.yaml
diloco_training/data/: __init__.py  c4_pile.py  c4_prime.py  c4_stream_checkpoint.json  imagenet.py  librispeech.py  obgn_arxiv.py  tencent_ml.py  test_datasets.py  tmp.py
diloco_training/datasets/: __init__.py  c4_pile.py  imagenet.py  librispeech.py  obgn_arxiv.py  tencent_ml.py
diloco_training/models/: __init__.py  big_gan.py  gcn.py  gpt_neo.py  gpt_neo_x.py  resnet.py  wav2vec2.py
diloco_training/training/: ddp_trainer.py  diloco_trainer.py  distributed_trainer.py  main.py  simple.py  start_training.py  training_config.py
diloco_training/training/wandb/: latest-run
diloco_training/training/wandb/offline-run-20250314_150953-gv3clz75/: run-gv3clz75.wandb
diloco_training/training/wandb/offline-run-20250314_150953-gv3clz75/files/: wandb-metadata.json
diloco_training/training/wandb/offline-run-20250316_092452-o5zg8iy8/: run-o5zg8iy8.wandb
diloco_training/training/wandb/offline-run-20250316_092452-o5zg8iy8/files/: wandb-metadata.json
diloco_training/training/wandb/offline-run-20250316_095708-zfayduzi/: run-zfayduzi.wandb
diloco_training/training/wandb/offline-run-20250316_095708-zfayduzi/files/: wandb-metadata.json
diloco_training/training/wandb/offline-run-20250316_100143-6u74vm5v/: run-6u74vm5v.wandb
diloco_training/training/wandb/offline-run-20250316_100143-6u74vm5v/files/: wandb-metadata.json
diloco_training/training/wandb/offline-run-20250316_103712-h78sxuea/: run-h78sxuea.wandb
diloco_training/training/wandb/offline-run-20250316_103712-h78sxuea/files/: wandb-metadata.json
diloco_training/training/wandb/offline-run-20250316_160525-q8j9kf1w/: run-q8j9kf1w.wandb
diloco_training/training/wandb/offline-run-20250316_160525-q8j9kf1w/files/: wandb-metadata.json
diloco_training/training/wandb/offline-run-20250318_062612-dy13due7/: run-dy13due7.wandb
diloco_training/training/wandb/offline-run-20250318_062612-dy13due7/files/: wandb-metadata.json
diloco_training/training/wandb/offline-run-20250318_062857-yuy9wbz5/: run-yuy9wbz5.wandb
diloco_training/training/wandb/offline-run-20250318_062857-yuy9wbz5/files/: wandb-metadata.json
diloco_training/training/wandb/offline-run-20250318_063114-4kdpmyov/: run-4kdpmyov.wandb
diloco_training/training/wandb/offline-run-20250318_063114-4kdpmyov/files/: wandb-metadata.json
diloco_training/training/wandb/offline-run-20250318_063233-wfvzrktq/: run-wfvzrktq.wandb
diloco_training/training/wandb/offline-run-20250318_063233-wfvzrktq/files/: wandb-metadata.json
diloco_training/training/wandb/offline-run-20250318_063646-k49c2fn1/: run-k49c2fn1.wandb
diloco_training/training/wandb/offline-run-20250318_063646-k49c2fn1/files/: requirements.txt  (+1 more)
diloco_training/training/wandb/offline-run-20250318_063955-hwwkmido/: run-hwwkmido.wandb
diloco_training/training/wandb/offline-run-20250318_064059-iw4yche6/: run-iw4yche6.wandb
diloco_training/training/wandb/offline-run-20250318_064439-rmoe8agg/: run-rmoe8agg.wandb
diloco_training/utils/: args_types.py  demo_optimizer.py  diloco_utils.py  exalsius_logger.py  heterogeneous.py  hf_download.py  metrics_logger.py  quantization.py
examples/: config-example.yaml  torchrun.sh
tests/: test_diloco_trainer.py
tests/integration/: test_cli.py  test_diloco_trainer.py
tests/unit/data/: test_test_datasets.py
(+3 files in other folders)
