[project]
name = "diloco-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets==2.19.1",
    "librosa>=0.10.2.post1",
    "pandas>=2.2.3",
    "pytorch-pretrained-biggan>=0.1.1",
    "soundfile>=0.13.1",
    "torch>=2.6.0",
    "torch-geometric>=2.6.1",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.49.0",
    "wandb>=0.19.7",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["diloco_training"]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pre-commit>=4.1.0",
    "ruff>=0.9.7",
]
