[project]
name = "diloco-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.1",
    "datasets==3.4.0",
    "librosa>=0.10.2.post1",
    "ogb>=1.3.6",
    "pandas>=2.2.3",
    "pytorch-pretrained-biggan>=0.1.1",
    "soundfile>=0.13.1",
    "torch-geometric>=2.6.1",
    "transformers>=4.49.0",
    "wandb>=0.19.7",
    "matplotlib>=3.10.1",
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "torchaudio>=2.5.0",
    "seaborn>=0.13.2",
    "setuptools>=76.1.0",
    "huggingface-hub>=0.29.3",
    "pynvml>=12.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pre-commit>=4.1.0",
    "ruff>=0.9.7",
]
test = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["diloco_training"]

[tool.uv]
no-build-isolation-package = ['flash-attn']

[tool.pytest.ini_options]
testpaths = "tests"
python_files = "test_*.py"
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
