[project]
name = "diloco-training"
version = "0.2.1"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "einops>=0.8.1",
    "datasets==3.4.0",
    "librosa>=0.10.2.post1",
    "ogb>=1.3.6",
    "pandas>=2.2.3",
    "pytorch-pretrained-biggan>=0.1.1",
    "soundfile>=0.13.1",
    "transformers>=4.49.0",
    "wandb>=0.19.7",
    "matplotlib>=3.10.1",
    "seaborn>=0.13.2",
    "setuptools>=76.1.0",
    "huggingface-hub>=0.29.3",
    "pydantic-settings>=2.10.1",
    "torchdata>=0.11.0",
    "python-etcd>=0.4.5",
]

[project.optional-dependencies]
cuda = [
    "torch==2.7.1",
    "torchvision",
    "torchaudio",
    "torch-geometric>=2.6.1",
    "pyg-lib>=0.4.0",
    "pynvml>=12.0.0",
]
rocm = [
    "torch==2.7.1",
    "torchvision",
    "torchaudio",
    "psutil"
]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pre-commit>=4.1.0",
    "ruff>=0.9.7",
]
test = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["diloco_training"]

[tool.uv]
no-build-isolation-package = ['flash-attn']

# PyTorch Geometric find-links for CUDA builds
# For ROCm builds, use uv.rocm.lock with appropriate index-url in Dockerfile
find-links = [
    "https://data.pyg.org/whl/torch-2.7.1+cu126.html",
]

# PyTorch CUDA index for CUDA packages (use with "full" suffix https://github.com/astral-sh/uv/issues/16784)
[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126-full"
explicit = true

[tool.pytest.ini_options]
testpaths = "tests"
python_files = "test_*.py"
pythonpath = ["."]

[dependency-groups]
dev = [
    "pre-commit>=4.4.0",
    "pytest>=8.3.5",
]